Archive2/ff/21ee1d41ff5d90/output
+ clang++ -O3 -std=c++1y -stdlib=libc++ -Wall -Wextra -pedantic main.cpp -lcxxrt -ldl -o a.out
main.cpp:57:56: error: implicit instantiation of undefined template 'TD<Pack<Group<Wrap<long, std::__1::basic_string<std::__1::allocator<char>, char, std::__1::char_traits<char> >, short>, int, long, short>, double, long, int, char> >'
    TD<TransformNestedPack<NestedPack2, Rot, 2>::type> c;
                                                       ^
main.cpp:42:23: note: template is declared here
template<class> class TD;
                      ^
1 error generated.
+ g++ -O3 -std=c++1y -Wall -Wextra -pedantic main.cpp -o a.out
main.cpp: In function 'int main()':
main.cpp:57:56: error: aggregate 'TD<Pack<Group<Wrap<long int, std::basic_string<std::allocator<char>, char, std::char_traits<char> >, short int>, int, long int, short int>, double, long int, int, char> > c' has incomplete type and cannot be defined
     TD<TransformNestedPack<NestedPack2, Rot, 2>::type> c;
                                                        ^
